# Kurs2

./: .gitignore  README.md  main.py  pyproject.toml
data/: operations.json
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_widget.py
